# Bootcamp-Acc-l-rateur-IA-Cohorte-1

./: README.md
Semaine 1/Session  1/: README.md  requirements.txt
Semaine 1/Session  1/ProjetAnalyseMarchéEmploi/: .gitignore  GUIDE_UTILISATION.md  Partie1-scraper_emplois.ipynb  Partie2_tableau_bord_marche_emploi.py  README.md  pyproject.toml  requirements.txt
Semaine 1/Session  1/ProjetAnalyseMarchéEmploi/data/: donnees_marche_emploi.csv
Semaine 1/Session 2/: Cours_Bonnes_Pratiques_IA_Anaconda.ipynb  Resume_Document_Financier.ipynb  Untitled.ipynb  Untitled1.ipynb  requirements.txt  tesla_q1_2023_analyse.txt
Semaine 1/Session 2/.ipynb_checkpoints/: Cours_Bonnes_Pratiques_IA_Anaconda-checkpoint.ipynb  requirements-checkpoint.txt
Semaine2/Session1/: 01_partie1_statistique_univariee.ipynb  02_bivariee.ipynb  ecommerce_dataset.csv
Semaine2/Session1/.ipynb_checkpoints/: 01_partie1_statistique_univariee-checkpoint.ipynb
Semaine2/Session2/: 01_Analyse_bivarie_tests_complet.ipynb
