[project]
name = "projet-etudiants"
version = "0.1.0"
description = "Projet éducatif : Scraping et analyse du marché des emplois tech avec dashboard interactif"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "lxml>=4.9.0",
]

